--- a/css/myStyle.scss
+++ b/css/myStyle.scss
@@ -34,6 +34,9 @@ h5,
 h6 {
   color: var(--ColorTitle);
 }
+h4{
+  font-size: 1.4rem;
+}
 
 a {
   text-decoration: none !important;
@@ -1052,14 +1055,23 @@ input:checked + .slider:before {
   .timeline{
     padding: 0;
   }
+  .timeline > div:first-child{
+    display: block  !important;
+  }
   .timeline::before, .timeline::after{
     display:none;
   }
   .timeline .time{
     display: block  !important;
-    position: absolute;
-    top:0;
-    right:0
+    margin: 0;
+    padding:0  !important;
+    margin-bottom: 3px;
+    // position: absolute;
+    // top:0;
+    // right:0
+  }
+  .isotope > .id{
+    margin-bottom: 0px !important;
   }
 }
 
